--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,200 @@ table {
 input {
   -webkit-appearance: none;
   border-radius: 0;
+}
+
+body {
+  background-color: hsl(0, 0%, 96%);
+}
+
+.hero,
+.main__section,
+.footer {
+  padding: 2rem;
+}
+@media screen and (min-width: 635px) {
+  .hero,
+  .main__section,
+  .footer {
+    padding: 4rem;
+  }
+}
+@media screen and (min-width: 835px) {
+  .hero,
+  .main__section,
+  .footer {
+    padding: 4rem 8rem;
+  }
+}
+
+.hero {
+  background-image: url(/images/background-upper.png);
+  background-size: cover;
+}
+
+.main__section--offer {
+  background-color: hsla(281, 29%, 81%, 0.45);
+}
+.main__section--contact {
+  background-image: url(/images/background-lower.png);
+  background-size: cover;
+}
+
+body {
+  font-size: 87.5%;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  color: hsl(84, 10%, 10%);
+  line-height: 1.5;
+}
+@media screen and (min-width: 635px) {
+  body {
+    font-size: 100%;
+    text-align: left;
+  }
+}
+
+.title {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+@media screen and (min-width: 635px) {
+  .title {
+    text-align: left;
+  }
+}
+.title--main {
+  font-size: 1.25rem;
+}
+@media screen and (min-width: 635px) {
+  .title--main {
+    font-size: 2.625rem;
+  }
+}
+@media screen and (min-width: 835px) {
+  .title--main {
+    font-size: 4rem;
+  }
+}
+.title--submain {
+  font-size: 1rem;
+}
+@media screen and (min-width: 635px) {
+  .title--submain {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (min-width: 835px) {
+  .title--submain {
+    font-size: 2rem;
+  }
+}
+.title--section {
+  font-size: 1.5rem;
+}
+@media screen and (min-width: 635px) {
+  .title--section {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 835px) {
+  .title--section {
+    font-size: 2.25rem;
+  }
+}
+.title--section::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 2px;
+  background-color: hsl(281, 70%, 64%);
+  margin: 0 auto;
+}
+@media screen and (min-width: 635px) {
+  .title--section::after {
+    margin: 0;
+  }
+}
+
+.text--bold {
+  font-weight: 600;
+}
+
+.link,
+.button__link {
+  text-decoration: none;
+  color: hsl(84, 10%, 10%);
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.hamburger {
+  position: fixed;
+  z-index: 100;
+  top: 2rem;
+  right: 2rem;
+  cursor: pointer;
+}
+@media screen and (min-width: 635px) {
+  .hamburger {
+    display: none;
+  }
+}
+
+.close__icon {
+  display: none;
+  color: white;
+}
+
+.menu {
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background: rgb(82, 0, 120);
+  list-style: none;
+  padding-top: 4rem;
+}
+@media screen and (min-width: 635px) {
+  .menu {
+    transform: translateY(0);
+    position: relative;
+    display: flex;
+    background: transparent;
+    padding-top: 0;
+  }
+}
+
+.show-menu {
+  transform: translateY(0);
+}
+
+.menu__link {
+  text-decoration: none;
+  display: block;
+  color: white;
+  padding: 1rem;
+}
+@media screen and (min-width: 635px) {
+  .menu__link {
+    color: hsl(84, 10%, 10%);
+  }
+}
+
+.footer {
+  background-color: hsla(281, 29%, 81%, 0.95);
+}
+@media screen and (min-width: 635px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
 }/*# sourceMappingURL=style.css.map */
