--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,2 +1,10 @@
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mix;
+
+.footer {
+  background-color: var.$color-primary-95;
+  @include mix.tablet {
+    display: flex;
+    justify-content: space-between;
+  }
+}
