--- a/css/style.css
+++ b/css/style.css
@@ -119,18 +119,18 @@ body {
 .footer {
   padding: 2rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .hero,
   .main__section,
   .footer {
-    padding: 4rem;
+    padding: 2rem 4rem;
   }
 }
-@media screen and (min-width: 835px) {
+@media screen and (min-width: 992px) {
   .hero,
   .main__section,
   .footer {
-    padding: 4rem 8rem;
+    padding: 2rem 8rem;
   }
 }
 
@@ -147,6 +147,10 @@ body {
   background-size: cover;
 }
 
+.image {
+  max-width: 100%;
+}
+
 body {
   font-size: 87.5%;
   text-align: center;
@@ -154,7 +158,7 @@ body {
   color: hsl(84, 10%, 10%);
   line-height: 1.5;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   body {
     font-size: 100%;
     text-align: left;
@@ -165,46 +169,51 @@ body {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .title {
     text-align: left;
   }
 }
 .title--main {
   font-size: 1.25rem;
+  margin-top: 2rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .title--main {
     font-size: 2.625rem;
+    margin-top: 4rem;
   }
 }
-@media screen and (min-width: 835px) {
+@media screen and (min-width: 992px) {
   .title--main {
     font-size: 4rem;
   }
 }
 .title--submain {
   font-size: 1rem;
+  margin-top: 1rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .title--submain {
     font-size: 1.75rem;
+    margin-top: 2rem;
   }
 }
-@media screen and (min-width: 835px) {
+@media screen and (min-width: 992px) {
   .title--submain {
     font-size: 2rem;
   }
 }
 .title--section {
   font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .title--section {
     font-size: 2rem;
   }
 }
-@media screen and (min-width: 835px) {
+@media screen and (min-width: 992px) {
   .title--section {
     font-size: 2.25rem;
   }
@@ -217,7 +226,7 @@ body {
   background-color: hsl(281, 70%, 64%);
   margin: 0 auto;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .title--section::after {
     margin: 0;
   }
@@ -233,6 +242,23 @@ body {
   color: hsl(84, 10%, 10%);
 }
 
+.button {
+  display: inline-block;
+  background-color: hsla(281, 29%, 81%, 0.75);
+  border-radius: 8px;
+  box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
+  padding: 0.5rem 1rem;
+  margin-top: 2rem;
+}
+@media screen and (min-width: 576px) {
+  .button {
+    margin-top: 4rem;
+  }
+}
+.button:hover {
+  background-color: hsla(281, 29%, 81%, 0.95);
+}
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -246,7 +272,7 @@ body {
   right: 2rem;
   cursor: pointer;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .hamburger {
     display: none;
   }
@@ -270,11 +296,12 @@ body {
   list-style: none;
   padding-top: 4rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .menu {
     transform: translateY(0);
     position: relative;
     display: flex;
+    gap: 2rem;
     background: transparent;
     padding-top: 0;
   }
@@ -285,21 +312,27 @@ body {
 }
 
 .menu__link {
+  font-family: "Abril Fatface", cursive;
   text-decoration: none;
   display: block;
   color: white;
   padding: 1rem;
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .menu__link {
     color: hsl(84, 10%, 10%);
+    padding: 0 1rem;
+    border-radius: 8px;
+  }
+  .menu__link:hover {
+    background-color: hsla(281, 29%, 81%, 0.75);
   }
 }
 
 .footer {
   background-color: hsla(281, 29%, 81%, 0.95);
 }
-@media screen and (min-width: 635px) {
+@media screen and (min-width: 576px) {
   .footer {
     display: flex;
     justify-content: space-between;
