--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -21,8 +21,10 @@ body {
   }
   &--main {
     font-size: 1.25rem;
+    margin-top: var.$spacing;
     @include mix.tablet {
       font-size: 2.625rem;
+      margin-top: var.$spacing-double;
     }
     @include mix.desktop {
       font-size: 4rem;
@@ -30,8 +32,10 @@ body {
   }
   &--submain {
     font-size: 1rem;
+    margin-top: var.$spacing-half;
     @include mix.tablet {
       font-size: 1.75rem;
+      margin-top: var.$spacing;
     }
     @include mix.desktop {
       font-size: 2rem;
@@ -39,6 +43,7 @@ body {
   }
   &--section {
     font-size: 1.5rem;
+    margin-bottom: var.$spacing;
     @include mix.tablet {
       font-size: 2rem;
     }
