Adding styling of contact form

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -72,4 +72,11 @@ body {
 .button__link {
   text-decoration: none;
   color: var.$color-text;
+  &:hover {
+    font-weight: 500;
+  }
+}
+
+.main__text:not(:last-child) {
+  margin-bottom: var.$spacing-half;
 }
