--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,7 +4,7 @@
 .button {
   display: inline-block;
   background-color: var.$color-primary-75;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
   padding: (var.$spacing-half / 2) var.$spacing-half;
   margin-top: var.$spacing;
