--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -32,15 +32,15 @@
   right: 0;
   bottom: 0;
   z-index: 99;
-  background: var.$color-menu;
-  list-style: none;
+  background-color: var.$color-menu;
+  list-style-type: none;
   padding-top: 4rem;
   @include mix.tablet {
     transform: translateY(0);
     position: relative;
     display: flex;
     gap: var.$spacing;
-    background: transparent;
+    background-color: transparent;
     padding-top: 0;
   }
 }
