--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
 .footer {
   padding: 2rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .hero,
   .main__section,
   .footer {
@@ -137,6 +137,7 @@ body {
 .hero {
   background-image: url(/images/background-upper.png);
   background-size: cover;
+  background-position: right 0 bottom 0;
 }
 
 .main__section--offer {
@@ -145,10 +146,43 @@ body {
 .main__section--contact {
   background-image: url(/images/background-lower.png);
   background-size: cover;
+  background-position: right 0 bottom 0;
+}
+
+@media screen and (min-width: 699px) {
+  .grid--about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.25rem;
+  }
 }
 
 .image {
   max-width: 100%;
+  margin-bottom: 1rem;
+}
+
+.container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+}
+@media screen and (min-width: 699px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.container__item {
+  width: 12.5rem;
+  background-color: hsl(0, 0%, 96%);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
 
 body {
@@ -158,7 +192,7 @@ body {
   color: hsl(84, 10%, 10%);
   line-height: 1.5;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   body {
     font-size: 100%;
     text-align: left;
@@ -169,7 +203,7 @@ body {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .title {
     text-align: left;
   }
@@ -178,7 +212,7 @@ body {
   font-size: 1.25rem;
   margin-top: 2rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .title--main {
     font-size: 2.625rem;
     margin-top: 4rem;
@@ -193,7 +227,7 @@ body {
   font-size: 1rem;
   margin-top: 1rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .title--submain {
     font-size: 1.75rem;
     margin-top: 2rem;
@@ -208,7 +242,7 @@ body {
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .title--section {
     font-size: 2rem;
   }
@@ -226,7 +260,7 @@ body {
   background-color: hsl(281, 70%, 64%);
   margin: 0 auto;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .title--section::after {
     margin: 0;
   }
@@ -241,16 +275,24 @@ body {
   text-decoration: none;
   color: hsl(84, 10%, 10%);
 }
+.link:hover,
+.button__link:hover {
+  font-weight: 500;
+}
+
+.main__text:not(:last-child) {
+  margin-bottom: 1rem;
+}
 
 .button {
   display: inline-block;
   background-color: hsla(281, 29%, 81%, 0.75);
-  border-radius: 8px;
+  border-radius: 0.5rem;
   box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
   padding: 0.5rem 1rem;
   margin-top: 2rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .button {
     margin-top: 4rem;
   }
@@ -272,7 +314,7 @@ body {
   right: 2rem;
   cursor: pointer;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .hamburger {
     display: none;
   }
@@ -292,17 +334,17 @@ body {
   right: 0;
   bottom: 0;
   z-index: 99;
-  background: rgb(82, 0, 120);
-  list-style: none;
+  background-color: rgb(82, 0, 120);
+  list-style-type: none;
   padding-top: 4rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .menu {
     transform: translateY(0);
     position: relative;
     display: flex;
     gap: 2rem;
-    background: transparent;
+    background-color: transparent;
     padding-top: 0;
   }
 }
@@ -318,7 +360,7 @@ body {
   color: white;
   padding: 1rem;
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .menu__link {
     color: hsl(84, 10%, 10%);
     padding: 0 1rem;
@@ -332,9 +374,56 @@ body {
 .footer {
   background-color: hsla(281, 29%, 81%, 0.95);
 }
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 699px) {
   .footer {
     display: flex;
     justify-content: space-between;
   }
+}
+
+.form__item {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+@media screen and (min-width: 699px) {
+  .form {
+    align-items: start;
+  }
+}
+
+.form__field {
+  border: 0;
+  width: 15rem;
+  min-height: 2rem;
+  box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
+  border-radius: 4px;
+}
+@media screen and (min-width: 699px) {
+  .form__field {
+    width: 22rem;
+  }
+}
+.form__field:focus {
+  outline: 0;
+  background-color: hsla(281, 29%, 81%, 0.95);
+}
+
+.button--submit {
+  border: 0;
+  font-family: "Poppins", sans-serif;
+}
+.button--submit:hover {
+  font-weight: 500;
+}
+
+.form__label {
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
