--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,6 +20,7 @@ body {
 .hero {
   background-image: url(/images/background-upper.png);
   background-size: cover;
+  background-position: right 0 bottom 0;
 }
 
 .main__section {
@@ -29,9 +30,40 @@ body {
   &--contact {
     background-image: url(/images/background-lower.png);
     background-size: cover;
+    background-position: right 0 bottom 0;
+  }
+}
+
+.grid--about {
+  @include mix.tablet {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.25rem;
   }
 }
 
 .image {
   max-width: 100%;
+  margin-bottom: var.$spacing-half;
+}
+
+.container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+  @include mix.tablet {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.container__item {
+  width: 12.5rem;
+  background-color: var.$color-background;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
