--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,29 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
 
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem auto;
+  background-color: white;
+  border-radius: 1rem;
+  width: 80%;
+  padding: 1rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
+}
+@media screen and (min-width: 699px) {
+  .card {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .card {
+    width: 50%;
+  }
+}
+
 body {
   font-size: 87.5%;
   text-align: center;
