--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -68,3 +68,22 @@ body {
   border-radius: 0.5rem;
   box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem auto;
+  background-color: white;
+  border-radius: 1rem;
+  width: 80%;
+  padding: 1rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
+  @include mix.tablet {
+    width: 70%;
+  }
+  @include mix.desktop {
+    width: 50%;
+  }
+}
