Changing SCSS files distribution

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
 @import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
 @import url("https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css");
+body {
+  background-color: hsl(0, 0%, 96%);
+}
+
+.hero,
+.main__section,
+.footer {
+  padding: 2rem;
+}
+@media screen and (min-width: 699px) {
+  .hero,
+  .main__section,
+  .footer {
+    padding: 2rem 4rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .hero,
+  .main__section,
+  .footer {
+    padding: 2rem 8rem;
+  }
+}
+
 *,
 *:before,
 *:after {
@@ -108,105 +132,6 @@ table {
 input {
   -webkit-appearance: none;
   border-radius: 0;
-}
-
-body {
-  background-color: hsl(0, 0%, 96%);
-}
-
-.hero,
-.main__section,
-.footer {
-  padding: 2rem;
-}
-@media screen and (min-width: 699px) {
-  .hero,
-  .main__section,
-  .footer {
-    padding: 2rem 4rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .hero,
-  .main__section,
-  .footer {
-    padding: 2rem 8rem;
-  }
-}
-
-.hero {
-  background-image: url(/images/background-upper.png);
-  background-size: cover;
-  background-position: right 0 bottom 0;
-}
-
-.main__section--offer {
-  background-color: hsla(281, 29%, 81%, 0.45);
-}
-.main__section--contact {
-  background-image: url(/images/background-lower.png);
-  background-size: cover;
-  background-position: right 0 bottom 0;
-}
-
-@media screen and (min-width: 699px) {
-  .grid--about {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.25rem;
-  }
-}
-
-.image {
-  max-width: 100%;
-  margin-bottom: 1rem;
-  border-radius: 1rem;
-}
-
-.container {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  gap: 1rem;
-}
-@media screen and (min-width: 699px) {
-  .container {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-}
-
-.container__item {
-  width: 12.5rem;
-  background-color: hsl(0, 0%, 96%);
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 4rem auto;
-  background-color: white;
-  border-radius: 1rem;
-  width: 80%;
-  padding: 1rem;
-  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
-}
-@media screen and (min-width: 699px) {
-  .card {
-    width: 70%;
-  }
-}
-@media screen and (min-width: 992px) {
-  .card {
-    width: 50%;
-  }
 }
 
 body {
@@ -325,6 +250,141 @@ body {
   background-color: hsla(281, 29%, 81%, 0.95);
 }
 
+.button--submit {
+  border: 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 100%;
+}
+.button--submit:hover {
+  font-weight: 500;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem auto;
+  background-color: white;
+  border-radius: 1rem;
+  width: 80%;
+  padding: 1rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
+}
+@media screen and (min-width: 699px) {
+  .card {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .card {
+    width: 50%;
+  }
+}
+
+.footer {
+  background-color: hsla(281, 29%, 81%, 0.95);
+}
+@media screen and (min-width: 699px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.form__item {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+@media screen and (min-width: 699px) {
+  .form {
+    align-items: start;
+  }
+}
+
+.form__field {
+  border: 0;
+  width: 15rem;
+  min-height: 2rem;
+  box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
+  border-radius: 4px;
+}
+@media screen and (min-width: 699px) {
+  .form__field {
+    width: 22rem;
+  }
+}
+.form__field:focus {
+  outline: 0;
+  background-color: hsla(281, 29%, 81%, 0.95);
+}
+
+.form__label {
+  font-weight: 500;
+}
+
+.hero {
+  background-image: url(/images/background-upper.png);
+  background-size: cover;
+  background-position: right 0 bottom 0;
+}
+
+.main__section--offer {
+  background-color: hsla(281, 29%, 81%, 0.45);
+}
+.main__section--contact {
+  background-image: url(/images/background-lower.png);
+  background-size: cover;
+  background-position: right 0 bottom 0;
+}
+
+/* Section About Me */
+@media screen and (min-width: 699px) {
+  .grid--about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.25rem;
+  }
+}
+
+.image {
+  max-width: 100%;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+}
+
+/* Section Offer */
+.container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+}
+@media screen and (min-width: 699px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.container__item {
+  width: 12.5rem;
+  background-color: hsl(0, 0%, 96%);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
+}
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -393,61 +453,4 @@ body {
   .menu__link:hover {
     background-color: hsla(281, 29%, 81%, 0.75);
   }
-}
-
-.footer {
-  background-color: hsla(281, 29%, 81%, 0.95);
-}
-@media screen and (min-width: 699px) {
-  .footer {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.form__item {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-}
-@media screen and (min-width: 699px) {
-  .form {
-    align-items: start;
-  }
-}
-
-.form__field {
-  border: 0;
-  width: 15rem;
-  min-height: 2rem;
-  box-shadow: 7px 7px 10px 0px rgba(26, 28, 23, 0.1);
-  border-radius: 4px;
-}
-@media screen and (min-width: 699px) {
-  .form__field {
-    width: 22rem;
-  }
-}
-.form__field:focus {
-  outline: 0;
-  background-color: hsla(281, 29%, 81%, 0.95);
-}
-
-.button--submit {
-  border: 0;
-  font-family: "Poppins", sans-serif;
-}
-.button--submit:hover {
-  font-weight: 500;
-}
-
-.form__label {
-  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
