--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,2 +1,8 @@
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mix;
+
+.hero {
+  background-image: url(/images/background-upper.png);
+  background-size: cover;
+  background-position: right 0 bottom 0;
+}
