--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -20,6 +20,7 @@
   border: 0;
   font-family: var.$font-main;
   font-size: 100%;
+  color: var.$color-text;
   &:hover {
     font-weight: 500;
   }
