--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -21,6 +21,7 @@
   font-family: var.$font-main;
   font-size: 100%;
   color: var.$color-text;
+  font-weight: 400;
   &:hover {
     font-weight: 500;
   }
