Changing section padding, size of hamburger etc.

--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,36 @@ body {
 }
 
 .hero,
-.main__section,
+.main__section {
+  padding-top: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 8rem;
+  padding-left: 2rem;
+}
+@media screen and (min-width: 699px) {
+  .hero,
+  .main__section {
+    padding-right: 4rem;
+    padding-left: 4rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .hero,
+  .main__section {
+    padding-right: 8rem;
+    padding-left: 8rem;
+  }
+}
+
 .footer {
   padding: 2rem;
 }
 @media screen and (min-width: 699px) {
-  .hero,
-  .main__section,
   .footer {
     padding: 2rem 4rem;
   }
 }
 @media screen and (min-width: 992px) {
-  .hero,
-  .main__section,
   .footer {
     padding: 2rem 8rem;
   }
@@ -352,8 +368,8 @@ body {
 @media screen and (min-width: 699px) {
   .grid--about {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.25rem;
+    grid-template-columns: 1fr 3fr;
+    gap: 2rem;
   }
 }
 
@@ -381,10 +397,9 @@ body {
 
 .container__item {
   width: 12.5rem;
-  background-color: hsl(0, 0%, 96%);
+  background-color: hsla(0, 0%, 96%, 0.75);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
 
 .navigation {
@@ -455,4 +470,10 @@ body {
   .menu__link:hover {
     background-color: hsla(281, 29%, 81%, 0.75);
   }
+}
+
+.menu__icon,
+.close__icon {
+  font-size: 1.5rem;
+  padding: 0.25rem 0.625rem;
 }/*# sourceMappingURL=style.css.map */
