--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $font-main: "Poppins", sans-serif;
 
 $color-text: hsla(84, 10, 10, 1);
 $color-background: hsla(0, 0, 96, 1);
+$color-background-transparent: hsla(0, 0, 96, 0.75);
 $color-contrast: hsla(281, 70, 64, 1);
 $color-menu: rgb(82, 0, 120);
 $color-primary-95: hsla(281, 29, 81, 0.95);
