--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -16,8 +16,8 @@
 .grid--about {
   @include mix.tablet {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.25rem;
+    grid-template-columns: 1fr 3fr;
+    gap: 2rem;
   }
 }
 
@@ -43,8 +43,7 @@
 
 .container__item {
   width: 12.5rem;
-  background-color: var.$color-background;
+  background-color: var.$color-background-transparent;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0px 4px 4px 0px rgba(26, 28, 23, 0.1);
 }
