--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,11 @@ body {
 }
 .title--main {
   font-size: 1.25rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 @media screen and (min-width: 699px) {
   .title--main {
     font-size: 2.625rem;
-    margin-top: 4rem;
   }
 }
 @media screen and (min-width: 992px) {
@@ -275,6 +274,10 @@ body {
 }
 .button--submit:hover {
   font-weight: 500;
+}
+
+.button--primary {
+  margin-top: 4rem;
 }
 
 .card {
